assignment - 2 almost done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <select class="box box-1" name="" id="">
               <option value="Select Type">Select Type</option>
             </select>
-            <button class="btn box">Find Now</button>
+            <button class="btn"><img src="./images/Frame.png" alt="">Find Now</button>
           </form>
         </div>
       </section>
